Trying to fix pdf download 2